draft-packages/title-block-zen/KaizenDraft/TitleBlockZen/TitleBlockZen.scss
@import "~@kaizen/design-tokens/sass/spacing";
@import "~@kaizen/design-tokens/sass/typography";
@import "~@kaizen/design-tokens/sass/color";
@import "~@kaizen/design-tokens/sass/layout";
@import "~@kaizen/component-library/styles/grid";
@import "~@kaizen/component-library/styles/layers";
@import "~@kaizen/deprecated-component-library-helpers/styles/layout";
@import "./TitleBlockBreakpoints.scss";
@import "./decision-tokens.scss";

$title-block-margin-width-on-medium-and-small: 12px;
$breadcrumb-circle-width: 48px;
$breadcrumb-breakpoint-width: $layout-content-max-width +
  $layout-content-side-margin * 2 + $breadcrumb-circle-width * 2.25;
$title-block-separator-height: 0.1875rem;
$tab-container-height-default: $ca-grid * 3;
$tab-container-height-small: $ca-grid * 2.5;
$tab-container-height-default-collapsed: $ca-grid + 0.1875rem;
$tab-container-height-medium-and-small-collapsed: $ca-grid * 0.75;

.titleBlock {
  position: relative;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: $dt-color-background-color-default;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;

  &.educationVariant {
    background-color: $dt-color-background-color-eduction;
  }

  &.adminVariant {
    background-color: $dt-color-background-color-admin;
  }

  @media print {
    display: none;
  }
}

.titleRow,
.rowBelowSeparator {
  display: flex;
  width: 100%;
  justify-content: center;
}

.adminVariant .titleRow {
  background-color: $color-white;
}

%titleBlockInner {
  max-width: $layout-content-max-width;
  margin: 0 $layout-content-side-margin;
  display: flex;
  flex-direction: column;
  width: 100%;
  min-width: 0; // this is an important trick to prevent flexbox items from overflowing

  @include title-block-medium-and-small {
    margin: 0 $title-block-margin-width-on-medium-and-small;
  }
}

.titleRowInner {
  @extend %titleBlockInner;
}

.rowBelowSeparatorInner {
  @extend %titleBlockInner;
}

.titleRowInnerContent {
  position: relative;
  display: flex;
  width: 100%;
  align-items: center;
  min-height: $ca-grid * 3.5;
  justify-content: space-between;
  border-bottom: $title-block-separator-height solid rgba($color-white-rgb, 0.1);

  .educationVariant & {
    border-bottom-color: rgba($color-purple-700-rgb, 0.2);
  }

  .adminVariant & {
    border-bottom-color: transparent;
  }

  @include title-block-medium-and-small {
    border-bottom: none;
    height: $ca-grid * 2.5;
  }
}

.title {
  display: flex;
  align-items: center;
  min-width: 0; // this is an important trick to prevent flexbox items from overflowing

  // Applying width 100% when the title is *not* long and is followed by a subtitle
  // causes misalignment of both.
  @include title-block-under-1366 {
    width: 100%;
  }
}

.titleAndSubtitle {
  display: flex;
  align-items: center;
  min-width: 0; // this is an important trick to prevent flexbox items from overflowing
  z-index: $ca-z-index-dropdown; // this ensures the page switcher dropdown sits over nav tabs

  .hasSubtitle & {
    @include title-block-under-1366 {
      transform: translateY(-0.38333em);
    }
  }
  transform: translateY(-0.0833333em);
}

.titleAndSubtitleInner {
  display: flex;
  min-width: 0; // this is an important trick to prevent flexbox items from overflowing

  // TODO: removing .hasLongTitle here fixes the alignment on Performance story, but we should be able to not wrap subtitle.
  .hasSubtitle.hasLongTitle.hasLongSubtitle & {
    align-items: center;

    @include title-block-under-1366 {
      align-items: baseline;
    }
  }

  .hasPageSwitcherSelect & {
    @include title-block-medium-and-small {
      align-items: normal;
      flex-direction: column;
      justify-content: space-between;
      transform: translateY($ca-grid / 3);
    }
  }

  .hasSubtitle & {
    align-items: baseline;
    overflow: hidden;

    @include title-block-under-1366 {
      align-items: normal;
      flex-direction: column;
      justify-content: space-between;
      transform: translateY($ca-grid / 3);

      .hasLongTitle.hasLongSubtitle & {
        align-items: baseline;
      }
    }

    @include title-block-medium-and-small {
      transform: translateY($ca-grid / 2);
    }
  }
}

.titleTextOverride.titleTextOverride {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  overflow: hidden;
  padding: 4px 0;

  @media (max-width: $breadcrumb-breakpoint-width) {
    font-family: $typography-heading-2-font-family;
    font-weight: $typography-heading-2-font-weight;
    font-size: $typography-heading-2-font-size;
    line-height: $typography-heading-2-line-height;
    letter-spacing: $typography-heading-2-letter-spacing;
  }
  @include title-block-under-1366 {
    font-family: $typography-heading-2-font-family;
    font-weight: $typography-heading-2-font-weight;
    font-size: $typography-heading-2-font-size;
    line-height: $typography-heading-2-line-height;
    letter-spacing: $typography-heading-2-letter-spacing;
    padding: 2px 0;
  }
  .hasLongTitle & {
    @include title-block-under-1366 {
      font-family: $typography-heading-3-font-family;
      font-weight: $typography-heading-3-font-weight;
      font-size: $typography-heading-3-font-size;
      line-height: $typography-heading-3-line-height;
      letter-spacing: $typography-heading-3-letter-spacing;
      padding: 2px 0;
    }
  }

  @include title-block-medium-and-small {
    font-family: $typography-heading-4-font-family;
    font-weight: $typography-heading-4-font-weight;
    font-size: $typography-heading-4-font-size;
    line-height: $typography-heading-4-line-height;
    letter-spacing: $typography-heading-4-letter-spacing;
    padding: 0;
  }
}
/* ... */

